--- a/alembic.ini
+++ b/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = alembic_dir
+script_location = alembicDir
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
@@ -33,10 +33,10 @@ prepend_sys_path = .
 # sourceless = false
 
 # version location specification; This defaults
-# to alembic_dir/versions.  When using multiple version
+# to alembicDir/versions.  When using multiple version
 # directories, initial revisions must be specified with --version-path.
 # The path separator used here should be the separator specified by "version_path_separator"
-# version_locations = %(here)s/bar:%(here)s/bat:alembic_dir/versions
+# version_locations = %(here)s/bar:%(here)s/bat:alembicDir/versions
 
 # version path separator; As mentioned above, this is the character used to split
 # version_locations. Valid values are:
@@ -51,6 +51,7 @@ version_path_separator = os  # default: use os.pathsep
 # output_encoding = utf-8
 
 sqlalchemy.url = 
+
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
