--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,3 +1,3 @@
 home = C:\Users\tienl\AppData\Local\Microsoft\WindowsApps\PythonSoftwareFoundation.Python.3.7_qbz5n2kfra8p0
-include-system-site-packages = false
+include-system-site-packages = True
 version = 3.7.9
