--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ ipython-genutils==0.2.0
 itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.3
-jupyter-client==6.1.12
+jupyter-client
 jupyter-core==4.7.1
 Mako==1.1.6
 MarkupSafe==2.0.1
