--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ ipython-genutils==0.2.0
 itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.3
-jupyter-client
+jupyter-client==6.1.12
 jupyter-core==4.7.1
 Mako==1.1.6
 MarkupSafe==2.0.1
@@ -59,13 +59,13 @@ pyOpenSSL==21.0.0
 pyperclip==1.8.2
 PyRect==0.1.4
 PyScreeze==0.1.28
-python-dateutil
+python-dateutil==1.5
 python-dotenv==0.19.2
 python-jose==3.3.0
 python-multipart==0.0.5
 pytweening==1.0.4
 pytz==2021.3
-pypiwin32==223
+pywin32==301
 PyYAML==5.4.1
 pyzmq==22.1.0
 requests==2.26.0
