--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ python-jose==3.3.0
 python-multipart==0.0.5
 pytweening==1.0.4
 pytz==2021.3
-pywin32==301
+pywin32
 PyYAML==5.4.1
 pyzmq==22.1.0
 requests==2.26.0
