--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ click==8.0.3
 colorama==0.4.4
 cryptography==35.0.0
 decorator==5.0.9
+dj-database-url==0.5.0
+Django==3.2.9
+django-heroku==0.3.1
 dnspython==2.1.0
 ecdsa==0.17.0
 email-validator==1.1.3
@@ -30,6 +33,8 @@ ipython-genutils==0.2.0
 itsdangerous==2.0.1
 jedi==0.18.0
 Jinja2==3.0.3
+jupyter-client==6.1.12
+jupyter-core==4.7.1
 Mako==1.1.6
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.2
